tests/purs/failing/3077.out
Error found:
in module [33mMain[0m
at tests/purs/failing/3077.purs:11:14 - 11:38 (line 11, column 14 - line 11, column 38)

  Could not match kind
  [33m      [0m
  [33m  Type[0m
  [33m      [0m
  with kind
  [33m        [0m
  [33m  Symbol[0m
  [33m        [0m

while trying to match type [33mSProxy[0m
  with type [33mt0[0m
while checking that expression [33mSProxy[0m
  has type [33mt0 t1[0m
in value declaration [33mwrong[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

